--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "clean": "shx rm -rf dist/ node_modules"
   },
   "dependencies": {
+    "core-util-is": "^1.0.2",
     "gun": "0.2020.520",
-    "vue": "3.0.5"
+    "vue": "3.0.5",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "4.14.1",
