--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-util-is": "^1.0.2",
     "gun": "0.2020.520",
+    "uuid": "^8.3.2",
     "vue": "3.0.5",
     "yarn": "^1.22.10"
   },
