--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@typescript-eslint/eslint-plugin": "4.14.1",
     "@typescript-eslint/parser": "4.14.1",
     "@vitejs/plugin-vue": "1.1.2",
