--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "include": [".eslintrc.js", "vite.config.ts", "src"]
+  "include": ["tailwind.config.js", "postcss.config.js", ".eslintrc.js", "vite.config.ts", "src"]
 }
