fix ts includes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "declaration": true,
     "declarationMap": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": "."
   },
   "exclude": ["node_modules", "dist"]
 }
