--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@spotreporter/frontend",
+  "name": "@spotreporter/spotreporter",
   "version": "0.0.1",
   "scripts": {
     "start": "vite",
